tests/paczka1/small_fuzzy/82264048.err
Error in line 1: GOj7uO A255 26,6
Error in line 3: GOj7uO S496 80,0
Error in line 13: S496 S88A 10,0
Error in line 10: S496 S885 62,3
